Media query fixed, minor edit to fix small overflow bug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -48,7 +48,7 @@ a:hover {
   display: inline-block;
   width: 44%;
   height: 44%;
-  overflow: auto;
+  overflow: hidden;
   margin: auto;
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
@@ -66,7 +66,7 @@ a:hover {
   display: inline-block;
   width: 44%;
   height: 44%;
-  overflow: auto;
+  overflow: hidden;
   margin: auto;
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
